--- a/style.css
+++ b/style.css
@@ -1,8 +1,89 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    align-items: center;
+body {
+  
+  background-color: #ff9a8b;
+  background-image: linear-gradient(
+    90deg,
+    #ff9a8b 0%,
+    #ff6a88 55%,
+    #ff99ac 100%
+  );
+  height: 100vh;
+}
+
+.header h1 {
+  font-family: "Gill Sans", "Gill Sans MT", "Trebuchet MS", sans-serif;
+  text-align: center;
+  margin: 30px;
+}
+
+.header h1:hover{
+    background-color: rgb(122, 238, 55);
+    color: rgb(75, 38, 14);
+    font-size: 34px;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content:center;
+  box-sizing: border-box;
+  border: 5px solid rgb(17, 166, 253);
+  margin: 80px;
+  padding: 50px;
+}
+
+#itm1 {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border: 2px solid rgb(91, 115, 219);
+  border-radius: 15px;
+  font-size: 50px;
+  text-align: center;
+}
+
+#itm2 {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border: 2px solid rgb(91, 115, 219);
+  border-radius: 15px;
+  font-size: 50px;
+  text-align: center;
+}
+
+
+#itm3 {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border: 2px solid rgb(91, 115, 219);
+  border-radius: 15px;
+  font-size: 50px;
+  text-align: center;
+}
+
+
+#btn {
+  
+  margin: 10px 40px;
+  width: 180px;
+  height: 100px;
+  border-radius: 50px;
+  border-color: rgb(211, 230, 106);
+  background-color: rgb(255, 38, 0);
+  font-size: 20px;
+  
+}
+
+#btn:hover {
+  background-color: green;
+  cursor: pointer;
+  font-size: 25px;
 }
